k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: healthslot
  labels:
    name: healthslot
    environment: production
