k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthslot-service
  namespace: healthslot
spec:
  selector:
    app: healthslot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
